# bandit-jit-practice

./: .gitignore  README.md  description.md  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agent-memory/code-reviewer/: MEMORY.md  project_sprint12_task1.md  project_sprint12_task2.md  project_sprint12_task3.md  project_sprint12_task4.md  project_sprint16_task1.md  project_sprint16_task2.md  project_test_architecture.md
.claude/agent-memory/developer/: MEMORY.md  project_sprint11_jax_cleanup.md  project_sprint11_test_cleanup.md  project_sprint12_task3_cleanup.md  project_sprint12_task4_rename.md  project_sprint13_test_consolidation.md
.claude/agents/: code-reviewer.md  developer.md  planner.md  reviewer.md  sprint-planner.md
configs/: benchmark.yaml  experiment.yaml  minimal.yaml  test.yaml
prompts/: constitution.md  workflow.md
prompts/roles/: developer.md  planner.md  reviewer.md
prompts/sprints/complete/: sprint1.md  sprint10.md  sprint11.md  sprint12.md  sprint13.md  sprint14.md  sprint15.md  sprint16.md  sprint2.md  sprint3.md  sprint4.md  sprint5.md  sprint6.md  sprint7.md  sprint9.md
prompts/todo/: vmap_optimization.md
scripts/: benchmark_jit.py  benchmark_jit_vmap.py  benchmark_vmap.py
src/: __init__.py  experiment.py  visualization.py
src/algorithms/: __init__.py  base.py  lts.py  oful.py
src/environments/: __init__.py  base.py  contextual_linear.py
tests/: conftest.py  test_benchmark_jit_vmap.py  test_environment.py  test_experiment.py  test_integration.py  test_oful.py  test_reproducibility.py  test_visualization.py  test_vmap.py
(+18 files in other folders)
