[project]
name = "bandit-jit-practice"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.9.2",
    "jaxlib>=0.9.2",
    "numpy>=2.4.3",
    "scipy>=1.17.1",
    "matplotlib>=3.8.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "omegaconf>=2.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = [
    "N",
    "Q",
    "PERF402",
    "PERF403",
    "PLE0115",
    "PLE0117",
    "PLR1704",
    "PLR1714",
    "PLW2901"
]
ignore = ["PLR2004", "PLW2901", "F401"]
